# mq-bot

./: .gitignore  Procfile  main.py  makefile  pyproject.toml  requirements.txt  run.py
alembic/: env.py
alembic/versions/: 8d363a4072c6_.py  d7080e42d1c4_.py  fe9ec652b644_.py
config/: config.py
mqbot/: __init__.py
mqbot/database/: __init__.py  crud.py  database.py  models.py  schemas.py
mqbot/telegram/: __init__.py  telegram.py
mqbot/web/: main.py  main_1.py
