[tool.poetry]
name = "mq-bot"
version = "0.1.0"
description = ""
authors = ["Mqtaw <mqtaw@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pyTelegramBotAPI = "^4.4.0"
python-dotenv = "^0.19.2"
SQLAlchemy = "^1.4.32"
alembic = "^1.7.7"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
